@@ -3,6 +3,7 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ==================================================================
+    * Parse Numeric:432.
     * Parse Numeric:433.
     * Added nick() to API::IRC.
     * Added %got_001 to Parser::IRC for checking if we've been
